Added flight validation
